# bopm-cont

./: CMakeLists.txt  README.md  makefile
include/: console.hpp  info.hpp  interfaces.hpp  model.hpp  optimizations.hpp  options.hpp  plot.hpp  rw.hpp  utils.hpp
installers/: install-cublas.sh  install-openblas.sh  install-requirements.sh
models/: model1.json  test2.json  test3.json
options/: model1.json  test2.json  test3.json
resources/: about.txt  manual.txt
shaders/: delta.py  model-tree.py  theta.py  vega.py
src/: console.cpp  info.cpp  interfaces.cpp  main.cpp  model.cpp  optimizations.cpp  options.cpp  plot.cpp  rw.cpp  utils.cpp
src/options/: american.cpp  asian.cpp  european.cpp  option.cpp
